--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.4.3
+Babel==2.8.0
 click==7.1.2
 Flask==1.1.2
+Flask-Babel==2.0.0
 Flask-DotEnv==0.1.2
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
