--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 alembic==1.4.3
 Babel==2.8.0
 click==7.1.2
+dnspython==2.0.0
+dominate==2.6.0
+email-validator==1.1.2
 Flask==1.1.2
 Flask-Babel==2.0.0
+Flask-Bootstrap4==4.0.2
 Flask-DotEnv==0.1.2
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lorem-text==1.5
 Mako==1.1.3
 MarkupSafe==1.1.1
 pygal==2.4.0
@@ -17,5 +23,6 @@ python-editor==1.0.4
 pytz==2020.4
 six==1.15.0
 SQLAlchemy==1.3.20
+visitor==0.1.3
 Werkzeug==1.0.1
 WTForms==2.3.3
