--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 FLASK_APP=app.py
 FLASK_ENV=development
 SECRET_KEY=VerySecretKey
+MAIL_LOGIN=social.insight.noreply@gmail.com
+MAIL_PASSWORD=pierogi14
 
