--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.4.3
 Babel==2.8.0
+blinker==1.4
 click==7.1.2
 dnspython==2.0.0
 dominate==2.6.0
@@ -9,6 +10,8 @@ Flask-Babel==2.0.0
 Flask-Bootstrap4==4.0.2
 Flask-DotEnv==0.1.2
 Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Moment==0.10.0
 Flask-WTF==0.14.3
 idna==2.10
 itsdangerous==1.1.0
