Ułatwienie dodawania wykresów poprzez dekoratory

--- a/frontend/babel.cfg
+++ b/frontend/babel.cfg
@@ -1,4 +1,4 @@
 [python: frontend/**.py]
-[python: db/**.py]
+[python: analytics/**.py]
 [jinja2: frontend/templates/**.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
