--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==7.1.2
 dnspython==2.0.0
 dominate==2.6.0
 email-validator==1.1.2
+emoji==0.6.0
 Flask==1.1.2
 Flask-Babel==2.0.0
 Flask-Bootstrap4==4.0.2
@@ -19,6 +20,7 @@ Jinja2==2.11.2
 lorem-text==1.5
 Mako==1.1.3
 MarkupSafe==1.1.1
+pandas==1.1.4
 pygal==2.4.0
 python-dateutil==2.8.1
 python-dotenv==0.15.0
