Możliwosć zobaczenia przykładowych wyników

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ db/base.db
 db/base.db-journal
 uploads/*.zip
 frontend/translations/messages.pot
+example.zip
 
 # Pliki konfiguracyjne Pycharma
 venv/
