--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 alembic==1.4.3
 Babel==2.8.0
 blinker==1.4
+cairocffi==1.2.0
+cffi==1.14.4
 click==7.1.2
+cryptography==3.3
+cssselect2==0.4.1
+defusedxml==0.6.0
 dnspython==2.0.0
 dominate==2.6.0
 email-validator==1.1.2
@@ -18,16 +23,26 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 lorem-text==1.5
+lxml==4.6.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+numpy==1.19.3
 pandas==1.1.4
+pdfkit==0.6.1
+Pillow==8.0.1
+pycparser==2.20
 pygal==2.4.0
+pyOpenSSL==20.0.0
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
 pytz==2020.4
+reportlab==3.5.56
 six==1.15.0
 SQLAlchemy==1.3.20
+tinycss2==1.1.0
 visitor==0.1.3
+webencodings==0.5.1
 Werkzeug==1.0.1
+wkhtmltopdf==0.2
 WTForms==2.3.3
