--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ reportlab==3.5.56
 six==1.15.0
 SQLAlchemy==1.3.20
 tinycss2==1.1.0
+user-agents==2.2.0
 visitor==0.1.3
 webencodings==0.5.1
 Werkzeug==1.0.1
