--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ alembic==1.4.3
 Babel==2.8.0
 blinker==1.4
 cairocffi==1.2.0
+CairoSVG==2.5.0
 cffi==1.14.4
 click==7.1.2
 cryptography==3.3
+cssselect==1.1.0
 cssselect2==0.4.1
 defusedxml==0.6.0
 dnspython==2.0.0
@@ -40,7 +42,9 @@ pytz==2020.4
 reportlab==3.5.56
 six==1.15.0
 SQLAlchemy==1.3.20
+tinycss==0.4
 tinycss2==1.1.0
+ua-parser==0.10.0
 user-agents==2.2.0
 visitor==0.1.3
 webencodings==0.5.1
