--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==7.1.2
 cryptography==3.3
 cssselect==1.1.0
 cssselect2==0.4.1
+cycler==0.10.0
 defusedxml==0.6.0
 dnspython==2.0.0
 dominate==2.6.0
@@ -22,12 +23,16 @@ Flask-Mail==0.9.1
 Flask-Moment==0.10.0
 Flask-WTF==0.14.3
 idna==2.10
+Image-Kit==0.0.3
+imgkit==1.0.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
+kiwisolver==1.3.1
 lorem-text==1.5
 lxml==4.6.2
 Mako==1.1.3
 MarkupSafe==1.1.1
+matplotlib==3.3.3
 numpy==1.19.3
 pandas==1.1.4
 pdfkit==0.6.1
@@ -35,11 +40,13 @@ Pillow==8.0.1
 pycparser==2.20
 pygal==2.4.0
 pyOpenSSL==20.0.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
 pytz==2020.4
 reportlab==3.5.56
+scipy==1.6.0
 six==1.15.0
 SQLAlchemy==1.3.20
 tinycss==0.4
