--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ FLASK_APP=app.py
 FLASK_ENV=development
 SECRET_KEY=VerySecretKey
 MAIL_LOGIN=social.insight.noreply@gmail.com
-MAIL_PASSWORD=pierogi14
+MAIL_PASSWORD=password
 
