Dodano ekran oczekiwania podczas generowania pliku pdf i zip

--- a/frontend/babel.cfg
+++ b/frontend/babel.cfg
@@ -1,4 +1,5 @@
 [python: frontend/**.py]
 [python: analytics/**.py]
 [jinja2: frontend/templates/**.html]
+[jinja2: frontend/templates/scripts/**.js]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
