--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,17 @@ Babel==2.8.0
 blinker==1.4
 cairocffi==1.2.0
 CairoSVG==2.5.0
+certifi==2020.12.5
 cffi==1.14.4
+chardet==4.0.0
 click==7.1.2
+colorama==0.4.4
 cryptography==3.3
 cssselect==1.1.0
 cssselect2==0.4.1
 cycler==0.10.0
 defusedxml==0.6.0
+demoji==0.4.0
 dnspython==2.0.0
 dominate==2.6.0
 email-validator==1.1.2
@@ -46,12 +50,14 @@ python-dotenv==0.15.0
 python-editor==1.0.4
 pytz==2020.4
 reportlab==3.5.56
+requests==2.25.1
 scipy==1.6.0
 six==1.15.0
 SQLAlchemy==1.3.20
 tinycss==0.4
 tinycss2==1.1.0
 ua-parser==0.10.0
+urllib3==1.26.2
 user-agents==2.2.0
 visitor==0.1.3
 webencodings==0.5.1
