Naprawiono niektóre tłumaczenia

--- a/frontend/babel.cfg
+++ b/frontend/babel.cfg
@@ -1,5 +1,6 @@
 [python: frontend/**.py]
 [python: analytics/**.py]
+[python: db/**.py]
 [jinja2: frontend/templates/**.html]
 [jinja2: frontend/templates/scripts/**.js]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
