Wyciągnięto kilka parametrów do pliku configuracji

--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ FLASK_ENV=development
 SECRET_KEY=VerySecretKey
 MAIL_LOGIN=social.insight.noreply@gmail.com
 MAIL_PASSWORD=pierogi14
+ADMIN_PASSWORD=password
 
