--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ cairocffi==1.2.0
 CairoSVG==2.5.0
 certifi==2020.12.5
 cffi==1.14.4
-chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
 cryptography==3.3
@@ -64,3 +63,4 @@ webencodings==0.5.1
 Werkzeug==1.0.1
 wkhtmltopdf==0.2
 WTForms==2.3.3
+ip2geotools==0.1.5
